--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -8,7 +8,6 @@
   background-attachment: fixed;
   box-shadow: inset 0 0 0 2000px rgba(28, 28, 28, 0.9);
   min-height: 100vh;
-  background-attachment: scroll;
   overflow: hidden;
 }
 
